SONARJAVA-4277 Rework issue message, add secondaries, and clean implementation of S1142 (#4330)